--- a/src/styles.scss
+++ b/src/styles.scss
@@ -470,3 +470,7 @@ input:disabled, textarea:disabled, select:disabled {
     background: $errorColor;
     border-radius: 3px;
 }
+
+.toast-top-center {
+    top: 30px!important;
+}
