Added 'show password', but needs separate component

--- a/src/app/components/lists/lists.component.scss
+++ b/src/app/components/lists/lists.component.scss
@@ -160,7 +160,7 @@
 
 .actions .dropdown-menu {
     border: 2px solid $taskColor;
-    background: $taskColor
+    background: $taskColor;
 }
 
 .main-dropdown {
