--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $listColor: #03DAC5;
 $taskColor: #BB86FC;
+$warningColor: gold;
 $errorColor: #ff0266;
 $topBackground: "../../../assets/images/leavesBgnd.png";
