--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -47,3 +47,17 @@
 .google-login:hover {
     text-decoration: none;
 }
+
+.show-password {
+    position: absolute;
+    top: 38px;
+    right: 2%;
+    background: none;
+    border: none;
+    color: white;
+}
+
+.show-password:focus {
+    outline: none;
+    box-shadow: none;
+}
