Added slide animations on completing/removing tasks

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -115,6 +115,7 @@
         height: 100%;
         padding-right: 10px;
         overflow-y: auto;
+        overflow-x: hidden;
     }
     
     .padding-right {
