--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -48,7 +48,7 @@
             <mat-tab-group class="tasks-tabs" *ngIf="tasks" mat-align-tabs="start">
                 <mat-tab *ngIf="inProgressTasks.length > 0" [label]="'In Progress (' + inProgressTasks.length + ')'">
                     <div  cdkDropList class="inprogress-tasks" (cdkDropListDropped)="drop($event, inProgressTasks)">
-                        <div *ngFor="let task of (inProgressTasks | searchTaskFilter : searchFilter);let indexOfElement=index;" class="task task-color" cdkDrag>
+                        <div *ngFor="let task of (inProgressTasks | searchTaskFilter : searchFilter);let indexOfElement=index;" class="task task-color" cdkDrag [@slideAnimation]="task.animation">
                             <div class="drag-drop-placeholder" *cdkDragPlaceholder></div>
                             <div class="title-wrapper">
                                 <div class="checkbox-and-title">
@@ -93,7 +93,9 @@
                 
                 <mat-tab [label]="'Completed (' + completedTasks.length + ')'" *ngIf="completedTasks.length > 0">
                     <div class="completed-tasks">
-                        <div *ngFor="let task of (completedTasks | searchTaskFilter : searchFilter); let indexOfElement=index;" class="task task-color">
+                        <div *ngFor="let task of (completedTasks | searchTaskFilter : searchFilter); let indexOfElement=index;" 
+                            class="task task-color" 
+                            cdkDrag [@slideAnimation]="task.animation">
                             <div class="checkbox-and-title">
                                 <div class="circle-completed">
                                     <div class="checkmark"></div>
