Fixed revealed password on login - bug

--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -10,7 +10,7 @@
     minlength="8"
     #password="ngModel"
     />
-    <button class="show-password" (click)="changeShowPassword()" >
+    <button type="button" class="show-password" (click)="changeShowPassword()" >
         <i id="showPassword" [class]="!showPassword ? 'fa-solid fa-eye-slash' : 'fa-solid fa-eye'" ></i>
     </button>
     <div class="mt-3 custom-alert-danger" role="alert" *ngIf="password.errors['required'] && fSubmitted">
