--- a/src/app/components/lists/lists.component.scss
+++ b/src/app/components/lists/lists.component.scss
@@ -130,7 +130,7 @@
 .add-list .btn-primary {
     border-radius: 30px;
     border: none!important;
-    background: $taskColor;
+    background: $listColor;
 }
 
 .inprogress-dropdown-area,
