Changelog visible in app (when clicking on version number)

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -121,7 +121,7 @@
     </div>
     
     <div class="row bottom-row">   
-        <div class="version">
+        <div class="version" (click)="showChangelog()">
             Version {{this.version}}
         </div>
         <div class="add-task" *ngIf="selectedList && selectedList.status == ITEM_STATUS.inProgress">
