--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -494,6 +494,11 @@
     border-radius: 0 30px 0 30px;
 }
 
+.version:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+
 .title-wrapper {
     display: flex;
     align-items: center;
