--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
             completedTasks.length == 0">
                 This list doesn't have any tasks yet. Use the button from the right bottom corner to add tasks.
             </div>
-            <mat-tab-group class="tasks-tabs" *ngIf="tasks" mat-align-tabs="start">
+            <mat-tab-group class="tasks-tabs" *ngIf="tasks" mat-align-tabs="start" (selectedTabChange)="tasksTabChange($event)">
                 <mat-tab *ngIf="inProgressTasks.length > 0" [label]="'In Progress (' + inProgressTasks.length + ')'">
                     <div  cdkDropList class="inprogress-tasks" (cdkDropListDropped)="drop($event, inProgressTasks)">
                         <div *ngFor="let task of (inProgressTasks | searchTaskFilter : searchFilter);let indexOfElement=index;" class="task task-color" cdkDrag [@slideAnimation]="task.animation" [@cloneTaskAnimation]="task.animation">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </mat-tab>
-                
+               
                 <mat-tab [label]="'Completed (' + completedTasks.length + ')'" *ngIf="completedTasks.length > 0">
                     <div class="completed-tasks">
                         <div *ngFor="let task of (completedTasks | searchTaskFilter : searchFilter); let indexOfElement=index;" 
@@ -117,6 +117,7 @@
                     </div>
                 </mat-tab>
             </mat-tab-group>
+            <app-custom-paginator (eventChange)="paginatorEvent($event)" (list)="inProgressSelected == true ? inProgressTasks : completedTasks"></app-custom-paginator>
         </div>
     </div>
     
