--- a/src/app/components/custom-paginator/custom-paginator.component.scss
+++ b/src/app/components/custom-paginator/custom-paginator.component.scss
@@ -3,7 +3,8 @@
     justify-content: flex-end;
     width: 100%;
     align-items: center;
-    padding: 0 30px 0 30px;
+    padding: 0 20px 0 20px;
+    margin-top: 15px;
 }
 
 .full-width {
@@ -27,7 +28,6 @@
 }
 
 ::ng-deep .paginator-content .mat-form-field-infix {
-    padding: 0;
     margin: 0;
     padding-right: 5px;
     padding-left: 5px;
@@ -44,6 +44,11 @@
     align-items: center;
     justify-content: center;
     border: none!important;
+}
+
+.direction-button:disabled {
+    cursor: not-allowed;
+    color: gray;
 }
 
 .direction-button:hover {
