--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -47,8 +47,8 @@
             </div>
             <mat-tab-group class="tasks-tabs" *ngIf="tasks" mat-align-tabs="start" (selectedTabChange)="tasksTabChange($event)">
                 <mat-tab *ngIf="inProgressTasks.length > 0" [label]="'In Progress (' + inProgressTasks.length + ')'">
-                    <div  cdkDropList class="inprogress-tasks" (cdkDropListDropped)="drop($event, inProgressTasks)">
-                        <div *ngFor="let task of (shownTasks | searchTaskFilter : searchFilter);let indexOfElement=index;" class="task task-color" cdkDrag [@slideAnimation]="task.animation" [@cloneTaskAnimation]="task.animation">
+                    <div  cdkDropList class="inprogress-tasks" (cdkDropListDropped)="drop($event, shownInProgressTasks)">
+                        <div *ngFor="let task of (shownInProgressTasks | searchTaskFilter : searchFilter);let indexOfElement=index;" class="task task-color" cdkDrag [@slideAnimation]="task.animation" [@cloneTaskAnimation]="task.animation">
                             <div class="drag-drop-placeholder" *cdkDragPlaceholder></div>
                             <div class="title-wrapper">
                                 <div class="checkbox-and-title">
@@ -93,7 +93,7 @@
                
                 <mat-tab [label]="'Completed (' + completedTasks.length + ')'" *ngIf="completedTasks.length > 0">
                     <div class="completed-tasks">
-                        <div *ngFor="let task of (shownTasks | searchTaskFilter : searchFilter); let indexOfElement=index;" 
+                        <div *ngFor="let task of (shownCompletedTasks | searchTaskFilter : searchFilter); let indexOfElement=index;" 
                             class="task task-color" 
                             cdkDrag [@slideAnimation]="task.animation">
                             <div class="checkbox-and-title">
