Fixed bug of border added on pagination

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
     <div class="work-break">
         <app-work-break></app-work-break>    
     </div>
+    <!-- <app-testing [testInput]="lists"></app-testing> -->
     <div class="user-section-wrapper">  
         <div ngbDropdown class="user-section" id="userSectionDropdown">
             <img class="user-small-image" [src]="this.profilePicture">
