--- a/src/app/components/tags/tags.component.scss
+++ b/src/app/components/tags/tags.component.scss
@@ -13,11 +13,11 @@ mat-form-field  {
     display: none;
 }
 
-::ng-deep .mat-form-field-underline {
+::ng-deep .tags-list .mat-form-field-underline {
     display: none;
 }
 
-::ng-deep .mat-form-field-flex {
+::ng-deep .tags-list .mat-form-field-flex {
     background: initial!important;
     padding: 10px;
     border: 1px solid $listColor;
