Fixed some pagination bugs

--- a/src/app/components/modals/settings/settings.component.html
+++ b/src/app/components/modals/settings/settings.component.html
@@ -35,7 +35,7 @@
     </div>
     <div class="element flex-wrap">
         <div class="item-title">
-           Remove all existing tags 
+           Remove all existing tags <p style="font-weight: initial;"> (this won't remove them from existing tasks)</p>
         </div>
         <div class="bottom-section">
             <button class="btn remove-tags" (click)="removeTags()"> Remove Tags </button>
