--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -496,6 +496,7 @@
 .version {
     position: absolute;
     background: $taskColor;
+    color: white;
     padding: 10px 15px 10px 15px;
     bottom: 0;
     font-weight: 500;
