Fixed bug: Pagination shown even if there are no tasks in a list

--- a/src/app/components/custom-paginator/custom-paginator.component.html
+++ b/src/app/components/custom-paginator/custom-paginator.component.html
@@ -1,4 +1,4 @@
-<div class="row full-width">
+<div class="row full-width" *ngIf="showPaginator">
     <div class="paginator-content">
         Items per page: 
         <mat-form-field>
