Added loading spinner(ngx) on Login & Logout

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -136,3 +136,6 @@
         </div>
     </div>
 </div>
+
+<ngx-spinner bdColor ="#121212" size ="medium" color ="#BB86FC" type ="ball-atom" [fullScreen] ="true"><p style="color: white" > Logging out ... </p></ngx-spinner>
+
