--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -47,3 +47,12 @@
 .google-login:hover {
     text-decoration: none;
 }
+
+::ng-deep .ngx-spinner-overlay .la-ball-atom .ng-star-inserted:first-child {
+    background: #03DAC5;
+}
+
+::ng-deep .ngx-spinner-overlay .loading-text {
+    font-size: 18px;
+    top: 62%!important;
+}
