Fixed search box, now pagination is disabled when searching

--- a/src/app/components/custom-paginator/custom-paginator.component.html
+++ b/src/app/components/custom-paginator/custom-paginator.component.html
@@ -1,4 +1,4 @@
-<div class="row full-width" *ngIf="showPaginator">
+<div class="row full-width" *ngIf="showPaginator && showPagination">
     <div class="paginator-content">
         Items per page: 
         <mat-form-field>
