Added 'results found' upon searching tasks

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -119,6 +119,9 @@
                 </mat-tab>
             </mat-tab-group>
             <app-custom-paginator [showPagination]="showPagination" (eventChange)="paginatorEvent($event)"></app-custom-paginator>
+            <div *ngIf="showPagination == false" class="search-results">
+                Found results: {{foundResults}}
+            </div>
         </div>
     </div>
     
