--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -531,3 +531,10 @@
     font-size: 18px;
     top: 62%!important;
 }
+
+.search-results {
+    margin-top: 45px;
+    margin-right: 25px;
+    display: flex;
+    justify-content: flex-end;
+}
