--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -9,7 +9,7 @@
 }
 
 .list-background {
-    background: $listColor;
+    background: $listColor!important;
     color: whitesmoke;
 }
 
@@ -203,7 +203,9 @@
 }
 
 .create-task {
-    border-radius: 40px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
     display: flex;
     font-size: 35px;
     border: none;
@@ -211,7 +213,6 @@
     transition: transform 0.7s ease-in-out;
     justify-content: center;
     align-items: center;
-    padding: 5px;
     background: $listColor;
     color: whitesmoke;
 }
@@ -221,11 +222,6 @@
     transform: rotate(360deg);
 }
 
-.button-pulse-effect {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-    transform: scale(1);
-    animation: pulse-black 2s infinite;
-}
 
 .add-task-reminder {
     max-width: 200px;
@@ -234,27 +230,6 @@
     text-align: center;
     padding-right: 10px;
 }
-
-
-
-
-@keyframes pulse-black {
-    0% {
-        transform: scale(0.85);
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-    }
-
-    70% {
-        transform: scale(1);
-        box-shadow: 0 0 0 13px rgba(0, 0, 0, 0);
-    }
-
-    100% {
-        transform: scale(0.85);
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-    }
-}
-
 
 /* Rounded checkboxes */
 
@@ -533,8 +508,16 @@
 }
 
 .search-results {
-    margin-top: 45px;
+    margin-top: 43px;
     margin-right: 25px;
     display: flex;
     justify-content: flex-end;
+}
+
+.tutorial .col-6 {
+    background: $taskColor;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 15px;
+    padding: 10px;
 }
