--- a/src/styles.scss
+++ b/src/styles.scss
@@ -499,3 +499,65 @@ input:disabled, textarea:disabled, select:disabled {
 .relative {
     position: relative;
 }
+
+
+.button-pulse-effect {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    transform: scale(1);
+    animation: pulse-black 1s infinite;
+}
+
+.icon-pulse-effect {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    transform: scale(1);
+    animation: icon-pulse-black 1s infinite;
+}
+
+
+@keyframes icon-pulse-black {
+    0% {
+        transform: scale(0.85);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 13px rgba(0, 0, 0, 0);
+    }
+
+    100% {
+        transform: scale(0.85);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+@keyframes pulse-black {
+    0% {
+        transform: scale(0.85);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 13px rgba(0, 0, 0, 0);
+        background: $listColor;
+    }
+
+    100% {
+        transform: scale(0.85);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+.rotate {
+    animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
