--- a/src/styles.scss
+++ b/src/styles.scss
@@ -283,7 +283,18 @@ input:disabled, textarea:disabled, select:disabled {
       color: var(--header-text-dark);
     }
 
-    .task-manager-container,
+    .task-manager-container {
+        background: linear-gradient(90deg, rgba(18,18,18,1) 36%, rgba(31,27,36,1) 68%, rgba(33,37,41,1) 100%)!important;
+        color: var(--text-dark)!important;
+        
+        label, input,
+        ::placeholder,
+        .mat-option-text,
+        .mat-tab-label-content {
+            color: var(--text-dark)!important;
+        }
+    }
+
     .modal-content,
     .autocomplete-dropdown,
     textarea,
