Almost finished adding tutorial

--- a/src/app/components/lists/lists.component.html
+++ b/src/app/components/lists/lists.component.html
@@ -24,11 +24,11 @@
                     <span  class="progress-bar-text">{{list.percentCompleted}} %</span>
                     <ngb-progressbar [textType]="dark" [showValue]="false" [type]="progressBarColor" [value]="list.percentCompleted"></ngb-progressbar>
                 </div>
-                <div ngbDropdown>
+                <div ngbDropdown [open]="tutorialStep == 6">
                     <i class="fa-solid fa-caret-down dropdown-toggle" id="dropdownBasic1" ngbDropdownToggle></i>
                     <div class="list-dropdown" ngbDropdownMenu aria-labelledby="dropdownBasic1">
                         <button class="markCompleted" title="Mark as Completed"  *ngIf="list.percentCompleted == 100" (click)="markAsCompleted(list)" ngbTooltip="Mark as Completed">
-                            <i class="fa-solid fa-check"></i>
+                            <i [class]="tutorialStep == 6 ? 'fa-solid fa-check icon-pulse-effect' : 'fa-solid fa-check'"></i>
                         </button>
                         <button class="info" (click)="showListInfo(list)" title="Show List Info" ngbTooltip="List Info">
                             <i class="fa-solid fa-info"></i>
