--- a/src/app/components/lists/lists.component.scss
+++ b/src/app/components/lists/lists.component.scss
@@ -171,3 +171,10 @@
 .space-div {
     height: 12%;
 }
+
+.position-dropdown {
+    position: absolute;
+    inset: 0px auto auto 0px;
+    margin: 0px;
+    transform: translate(0px, 29px);
+}
