Added 'admin' role and history page

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -521,3 +521,9 @@
     border-radius: 15px;
     padding: 10px;
 }
+
+.admin-icon {
+    color: gold;
+    padding-right: 5px;
+    padding-top: 3px;
+}
