--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -7,10 +7,13 @@
         <div ngbDropdown [open]="tutorialStep == 2" class="user-section" id="userSectionDropdown">
             <img class="user-small-image" [src]="this.profilePicture">
             <div ngbDropdownToggle class="username">
+                <i *ngIf="this.isAdmin" class="fa-solid fa-bolt-lightning admin-icon"></i>
                 {{ userName }}
             </div>
+            
             <div id="user-section-dropdown-content" ngbDropdownMenu aria-labelledby="userSectionDropdown">
                 <div class="user-dropdown-action" (click)="openAccountModal()"> Account </div>
+                <div class="user-dropdown-action" *ngIf="this.isAdmin" (click)="openHistoryPage()"> History </div>
                 <div [class]="tutorialStep == 2 ?  'user-dropdown-action list-background' : 'user-dropdown-action'" (click)="showSettings()"> Settings </div>
                 <div class="user-dropdown-action" (click)="showTagsList()"> Tags List </div>
                 <div class="user-dropdown-action" (click)="logOut()"> Log out </div>
